update footer link

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </body>
 
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="http://www.cursoemvideo.com" target="_blank">CursoemVideo</a></p>
+        <p>Aluno Anderson Marley do <a href="http://www.cursoemvideo.com" target="_blank">CursoemVideo</a> lecionado pelo professor<a href="https://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a></p>
     </footer>
 
 </html>
